Bug 134357 - Sidebar: paragraph widget clipped on the right (and far wider than necessary)
Summary: Sidebar: paragraph widget clipped on the right (and far wider than necessary)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0.1 target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-06-28 10:39 UTC by Gerald Pfeifer
Modified: 2020-08-27 14:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot with LibreOffice 7.1 alpha - paragraph widget clipped of (111.41 KB, image/png)
2020-06-28 10:39 UTC, Gerald Pfeifer
Details
Screenshot with LibreOffice 6.4.4.2 (117.00 KB, image/png)
2020-06-28 10:40 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2020-06-28 10:39:07 UTC
Created attachment 162470 [details]
Screenshot with LibreOffice 7.1 alpha - paragraph widget clipped of

This  is with Version: 7.1.0.0.alpha0+
  Build ID: 3ba009e0c2b7800305103f8ec86df58625fed955
  CPU threads: 4; OS: Linux 5.6; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-06-25_05:32:26
and according to a user he's also seeing it with current 7.0 beta.

This is a regression from LibreOffice 6.4.


How to reproduce:

 1. Open an arbitrary presentation.
 2. Ensure the sidebar is visible.
 3. Edit a text block (or create one if necessary).
 4. Observe how the paragraph widget in the sidebar is cut off.

Also observe that the sidebar is *far* wider in 7.1 than it used to be in 6.4
and *still* clips now.
Comment 1 Gerald Pfeifer 2020-06-28 10:40:53 UTC
Created attachment 162471 [details]
Screenshot with LibreOffice 6.4.4.2
Comment 2 Xisco Faulí 2020-06-29 16:06:08 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=37f5f9896449c6e2cb9aa481f004cd887672d2ed

author	Caolán McNamara <caolanm@redhat.com>	2020-01-26 19:48:54 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-01-27 09:53:20 +0100
commit 37f5f9896449c6e2cb9aa481f004cd887672d2ed (patch)
tree 08d64e511b9d642b5c7711fba9c1ae6cf6d34090
parent 960bc8553328c6bfb8818094195e0f737eb013a9 (diff)
tdf#130197 give paragraph and table panels column widths of 5 toolbutton widths

Bisected with: bibisect-linux64-7.0

Adding Cc: to Caolán McNamara
Comment 3 Caolán McNamara 2020-06-29 19:06:17 UTC
I'm sure we fixed this at one point but it seems to have returned as a problem
Comment 4 Caolán McNamara 2020-06-30 16:38:41 UTC
The logic of bug 130197 is still relevant, but since https://cgit.freedesktop.org/libreoffice/core/commit/?id=754bea8c6a17889f9d4d23bf98847b6b67253220 the width can be reduced in line with that
Comment 5 Commit Notification 2020-06-30 20:14:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/f8e8b0d1747e16394d43eec7a1ef2b33b5678619

tdf#134357 we can reduce the min toolbar sidebar width

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-06-30 23:38:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9bef09cb2f0c9c9e6819f28ed8e83c0edd6eadb6

tdf#134357 we can reduce the min toolbar sidebar width

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2020-07-01 08:34:54 UTC
That should make a noticeable difference. Otherwise a redesign of the table sidebar is indicated to narrow its design to allow the rest to be narrower too
Comment 8 Gerald Pfeifer 2020-08-16 14:52:28 UTC
This addresses the clipping of the sidebar, thank you!

It still feels a little wide, though. Do you think reducing the width of 
the edit boxes would help?  They feel wider than necessary (= more digits
than one would need)?
Comment 9 Caolán McNamara 2020-08-16 18:24:07 UTC
no, at this point its the table sidebar which sets the overall width. That one has two homogeneous columns where one of the columns has either 4 normal toolbar buttons, or one normal toolbar buttons and two toolbar menu buttons and that determines the overall width of the other panels
Comment 10 Caolán McNamara 2020-08-27 14:30:38 UTC
I'll call this fixed as the clipping is fixed, which doesn't negate the option of a new bug to request a redesign to allow the width to be reduced