tdf#134357 we can reduce the min toolbar sidebar width

since,

commit 754bea8c6a17889f9d4d23bf98847b6b67253220
Date:   Wed Apr 29 15:06:42 2020 +0100

    remove the padding around the dropdown button of GtkMenuToolButtons

the GtkMenuToolButton aren't as wide anymore so we don't need a min of 5
GtkToolButtons widths for tdf#130197, now the max of either 4 GtkToolButtons or
that of 1 GtkToolButtons + 2 GtkMenuToolButton is sufficient

Change-Id: I7296805b4b3c0d86ce3d08cadc8c2659104af619
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/97544
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>